force-app/main/default/objects/Property_Management_Detail__c/Property_Management_Detail__c.object-meta.xml
<CustomObject>
    <label>Property Management Detail</label>
    <nameField>
        <displayFormat>PM-{0000}</displayFormat>
        <label>Property Management Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Management Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>