force-app/main/default/objects/Property_Management_Detail__c/fields/Agreement_Duration__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Duration__c</fullName>
    <label>Agreement Duration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>