force-app/main/default/objects/Property_Management_Detail__c/fields/Service_Need__c.field-meta.xml
<CustomField>
    <fullName>Service_Need__c</fullName>
    <label>Service Need</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Pest Control</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Appliance Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>