force-app/main/default/objects/Property_Management_Detail__c/fields/Tenant_Present__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tenant Present</label>
    <type>Checkbox</type>
</CustomField>