force-app/main/default/objects/Property_Management_Detail__c/fields/Utility_Management__c.field-meta.xml
<CustomField>
    <fullName>Utility_Management__c</fullName>
    <label>Utility Management</label>
    <type>TextArea</type>
</CustomField>